src/app/tests/snapshots/osp_cli__app__tests__repl_runtime__repl_direct_help_verbose.snap
---
source: src/app/tests/repl_runtime.rs
assertion_line: 1183
expression: text
---
- Usage ----
  history <COMMAND>

- Commands -
  list
  prune
  clear
  help   Print this message or the help of the given subcommand(s)

- Options --
  -h, --help  Print help

- Common Invocation Options 
  --format <auto|json|table|mreg|value|md>                                          Format this invocation only
  --json | --table | --mreg | --value | --md
  Convenience aliases for --format
  --mode <auto|plain|rich>                                                          Render mode for this invocation
  --plain | --rich                                                                  Convenience aliases for --mode
  --color <auto|always|never>                                                       Color policy for this invocation
  --unicode <auto|always|never>                                                     Unicode policy for this invocation
  --ascii                                                                           Alias for --unicode never
  -v, --verbose                                                                     Increase message verbosity
  -q, --quiet                                                                       Decrease message verbosity
  -d, --debug                                                                       Increase developer log verbosity
  --cache                                                                           Reuse identical result in this REPL session
  --plugin-provider <PLUGIN_ID>                                                     Select provider for this invocation
  These flags may appear anywhere before `--` and affect only the current command.
  `--cache` is available only inside the interactive REPL.
