src/app/tests/snapshots/osp_cli__app__tests__repl_runtime__repl_help_alias_colored.snap
---
source: src/app/tests/repl_runtime.rs
assertion_line: 1104
expression: text
---
[38;2;232;223;246m─ [0m[32mUsage[0m[38;2;232;223;246m ────[0m
[34m  history <COMMAND>[0m

[38;2;232;223;246m─ [0m[32mCommands[0m[38;2;232;223;246m ─[0m
  [31mlist[0m[34m   List persisted history entries[0m
  [31mprune[0m[34m  Retain only the newest `keep` entries[0m
  [31mclear[0m[34m  Remove all persisted history entries[0m
  [31mhelp[0m[34m   Print this message or the help of the given subcommand(s)[0m

[38;2;232;223;246m─ [0m[32mOptions[0m[38;2;232;223;246m ──[0m
  [31m-h, --help[0m[34m  Print help[0m
