src/app/tests/snapshots/osp_cli__app__tests__repl_runtime__repl_help_alias_invalid_target_help_--help.snap
---
source: src/app/tests/repl_runtime.rs
assertion_line: 1130
expression: text
---
invalid help target: --help


- Usage ----
  help <command>

- Notes ----
  Use bare help for the REPL overview.
  help help and help --help are not valid.
  Add -v to include common invocation options.
