src/app/tests/snapshots/osp_cli__app__tests__repl_runtime__repl_invalid_subcommand_inline_help.snap
---
source: src/app/tests/repl_runtime.rs
assertion_line: 892
expression: text
---
unrecognized subcommand 'sho'

- Usage ----
  config <COMMAND>
